--- a/attic/arith4parser.ipynb
+++ b/attic/arith4parser.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,15 +302,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Parse the input string and print the result in Polish notation.\n",
+      "\n",
+      "Input string: a + b * (c - d) + ab\n",
       "+ + a * b - c d ab\n",
+      "\n",
+      "Input string: (a/b + 102)*(const - 2*var)\n",
       "* + / a b 102 - const * 2 var\n",
+      "\n",
+      "Some invalid inputs:\n",
+      "\n",
       "ValueError: 'UpperCaseVar' is invalid (non-token)\n",
       "ValueError: 'UpperCaseVar' is invalid (non-token)\n",
       "SyntaxError: Expected numeral or identifier, in atom(): + (op_type1)\n",
@@ -321,9 +329,17 @@
     }
    ],
    "source": [
-    "testParser(\"a + b * (c - d) + ab\")\n",
-    "testParser(\"(a/b + 102)*(const - 2*var)\")\n",
-    "# Some invalid inputs.\n",
+    "print(\"Parse the input string and print the result in Polish notation.\\n\")\n",
+    "\n",
+    "inputString1 = \"a + b * (c - d) + ab\"\n",
+    "print(f\"Input string: {inputString1}\")\n",
+    "testParser(inputString1) # ab is a single variable. It is not a times b\n",
+    "inputString2 = \"(a/b + 102)*(const - 2*var)\"\n",
+    "print(f\"\\nInput string: {inputString2}\")\n",
+    "testParser(inputString2)\n",
+    "\n",
+    "print(\"\\nSome invalid inputs:\\n\")\n",
+    "\n",
     "testParser(\"c - a + UpperCaseVar\")\n",
     "testParser(\"c1 - a + UpperCaseVar\")\n",
     "testParser(\"a + + b\")\n",
