--- a/attic/arith7parser.ipynb
+++ b/attic/arith7parser.ipynb
@@ -10,17 +10,17 @@
     "`arith7parser.ipynb` is an improvement over `arith7parser.ipynb`  \n",
     "as we can now display AST in tree diagram (bussproof style).\n",
     "\n",
-    "Most code is imported from arith7_parse.py and this file,  \n",
-    "`arith7parser.ipynb` is essentially a driver script."
+    "Most code is imported from arith7_parse.py,  \n",
+    "and this file `arith7parser.ipynb` is essentially a driver script."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main'\n",
+    "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/attic'\n",
     "\n",
     "# import httpimport\n",
     "# with httpimport.remote_repo(url):\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
