--- a/logical_formulas/truth_table.ipynb
+++ b/logical_formulas/truth_table.ipynb
@@ -15,6 +15,11 @@
     }
    ],
    "source": [
+    "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/logical_formulas'\n",
+    "# import httpimport\n",
+    "# with httpimport.remote_repo(url):\n",
+    "#   from truth_table import *\n",
+    "\n",
     "from truth_table import *\n",
     "\n",
     "input_str = 'A or (B2(c,d+1) and forall x C1(x)) imp forall x C1(x) and B2(c,d+1)'\n",
@@ -67,7 +72,7 @@
    "source": [
     "fmla.display_infix() # LaTeX\n",
     "fmla.display_infix('text') # same as print(fmla)\n",
-    "fmla.ast.draw_tree() # Graphviz, tree diagram, terms are leaves (term nodes are not shown)"
+    "fmla.ast.draw_tree() # Matplotlib tree diagram, terms are leaves (term nodes are not shown)"
    ]
   },
   {
@@ -79,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['forall x C1(x)', 'B2(c, d + 1)', 'A']\n"
+      "['A', 'forall x C1(x)', 'B2(c, d + 1)']\n"
      ]
     }
    ],
@@ -99,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C2(y, z)', 'A', 'forall x C1(x)']\n"
+      "['C2(y, z)', 'forall x C1(x)', 'A']\n"
      ]
     }
    ],
@@ -121,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C2(y, z)', 'forall x C1(x)', 'B2(c, d + 1)', 'A']\n"
+      "['A', 'C2(y, z)', 'forall x C1(x)', 'B2(c, d + 1)']\n"
      ]
     }
    ],
@@ -154,15 +159,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A, id=3, bVal=-1, level=-1, alt_str=A\n",
+      "A, id=0, bVal=-1, level=-1, alt_str=A\n",
       "or, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "B2, id=2, bVal=-1, level=-1, alt_str=P_1\n",
+      "B2, id=3, bVal=-1, level=-1, alt_str=P_1\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "B2, id=2, bVal=-1, level=-1, alt_str=P_1\n"
+      "B2, id=3, bVal=-1, level=-1, alt_str=P_1\n"
      ]
     },
     {
@@ -181,11 +186,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "C2, id=0, bVal=-1, level=-1, alt_str=P_3\n",
+      "C2, id=1, bVal=-1, level=-1, alt_str=P_3\n",
       "iff, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "A, id=3, bVal=-1, level=-1, alt_str=A\n"
+      "A, id=0, bVal=-1, level=-1, alt_str=A\n"
      ]
     }
    ],
@@ -306,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -386,42 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A, id=3, bVal=0, level=1, alt_str=A\n",
-      "or, id=-1, bVal=0, level=3, alt_str=\n",
-      "B2, id=2, bVal=0, level=1, alt_str=P_1\n",
-      "and, id=-1, bVal=0, level=2, alt_str=\n",
-      "forall, id=1, bVal=0, level=1, alt_str=P_2\n",
-      "imp, id=-1, bVal=1, level=4, alt_str=\n",
-      "forall, id=1, bVal=0, level=1, alt_str=P_2\n",
-      "and, id=-1, bVal=0, level=2, alt_str=\n",
-      "B2, id=2, bVal=0, level=1, alt_str=P_1\n",
-      "\n",
-      "forall, id=1, bVal=0, level=1, alt_str=P_2\n",
-      "imp, id=-1, bVal=1, level=3, alt_str=\n",
-      "C2, id=0, bVal=0, level=1, alt_str=P_3\n",
-      "iff, id=-1, bVal=1, level=2, alt_str=\n",
-      "A, id=3, bVal=0, level=1, alt_str=A\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Now that truth_table.show_truth_table() has been called,\n",
-    "# all the properties of propositional nodes are assigned values.\n",
-    "show_tree_nodes(fmla.ast)\n",
-    "print()\n",
-    "show_tree_nodes(fmla2.ast)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +442,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truth table for the following formula.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\forall x\\, C(x)\\: \\rightarrow\\: (C(y, z)\\: \\leftrightarrow\\: A)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prime subformulas = ['A', 'forall x C1(x)', 'C2(y, z)']\n",
+      "alt prop. letters = ['A', 'P_1', 'P_2']\n",
+      "\n",
+      "A P1 P2 : P1 imp (P2 iff A)\n",
+      "---------------------------\n",
+      "1 1  1    1   1   1   1  1\n",
+      "1 1  0    1   0   0   0  1\n",
+      "1 0  1    0   1   1   1  1\n",
+      "1 0  0    0   1   0   0  1\n",
+      "0 1  1    1   0   1   0  0\n",
+      "0 1  0    1   1   0   1  0\n",
+      "0 0  1    0   1   1   0  0\n",
+      "0 0  0    0   1   0   1  0\n",
+      "---------------------------\n",
+      "Level     1   3   1   2  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmla2.show_truth_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +605,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truth table for the following 5 formulas.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\neg\\, A$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle A\\: \\wedge\\: B$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle A\\: \\vee\\: B$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle A\\: \\rightarrow\\: B$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle A\\: \\leftrightarrow\\: B$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime subformulas and their alternate labels.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle [\\,A,\\: B\\,]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle [\\,A,\\: B\\,]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{|c|c||c|c||c|c|c||c|c|c||c|c|c||c|c|c|}\\hline\n",
+      "$A$ & $B$ & $\\neg$ & $A$ & $A$ & $\\wedge$ & $B$ & $A$\n",
+      " & $\\vee$ & $B$ & $A$ & $\\to$ & $B$ & $A$ & $\\leftrightarrow$ & $B$\n",
+      " \\\\ \\hline\n",
+      "1 & 1 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\\\\n",
+      "1 & 0 & 0 & 1 & 1 & 0 & 0 & 1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 0 \\\\\n",
+      "0 & 1 & 1 & 0 & 0 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 1 & 0 & 0 & 1 \\\\\n",
+      "0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0 & 0 & 1 & 0 \\\\ \\hline\n",
+      "\\multicolumn{2}{|c||}{Level}\n",
+      "    & 2 & 1 & 1 & 2 & 1 & 1 & 2 & 1 & 1 & 2 & 1 & 1 & 2 & 1 \\\\ \\hline\n",
+      "\\end{tabular}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fmla_not = Formula(\"not A\")\n",
+    "f_list = [fmla_not, fmla_and, fmla_or, fmla_imp, fmla_iff]\n",
+    "# Generate and print the latex source code for the truth table.\n",
+    "FormulaList(f_list).show_truth_table('latex') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +871,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle A\\: \\rightarrow\\: P_{1}$"
+       "$\\displaystyle \\forall y\\, A(y)\\: \\rightarrow\\: Q(a, b)$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -735,7 +883,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle P_{1}\\: \\vee\\: C$"
+       "$\\displaystyle Q(a, b)\\: \\vee\\: C$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -747,7 +895,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle (C\\: \\rightarrow\\: P_{1})\\: \\vee\\: A$"
+       "$\\displaystyle \\neg\\, (C\\: \\rightarrow\\: Q(a, b))\\: \\vee\\: \\forall y\\, A(y)$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -760,49 +908,137 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prime subformulas = ['A', 'C', 'P_1']\n",
-      "alt prop. letters = ['A', 'C', 'P_1']\n",
+      "prime subformulas = ['C', 'forall y A1(y)', 'Q2(a, b)']\n",
+      "alt prop. letters = ['C', 'P_1', 'P_2']\n",
       "\n",
-      "A C P1 : A imp P1, P1 or C, (C imp P1) or A\n",
-      "-------------------------------------------\n",
-      "A, id=0, bVal=1, level=0, alt_str=A\n",
-      "imp, id=-1, bVal=1, level=1, alt_str=\n",
-      "P_1, id=1, bVal=1, level=0, alt_str=P_1\n",
-      "1 1 1    1  1  1   1  1  1   1  1  1   1  1\n",
-      "A, id=0, bVal=1, level=0, alt_str=A\n",
-      "imp, id=-1, bVal=0, level=1, alt_str=\n",
-      "P_1, id=1, bVal=0, level=0, alt_str=P_1\n",
-      "A imp P_1\n"
+      "C P1 P2 : P1 imp P2, P2 or C, not (C imp P2) or P1\n",
+      "--------------------------------------------------\n",
+      "1 1  1    1   1  1   1  1  1   0   1  1  1   1  1 \n",
+      "1 1  0    1   0  0   0  1  1   1   1  0  0   1  1 \n",
+      "1 0  1    0   1  1   1  1  1   0   1  1  1   0  0 \n",
+      "1 0  0    0   1  0   0  1  1   1   1  0  0   1  0 \n",
+      "0 1  1    1   1  1   1  1  0   0   0  1  1   1  1 \n",
+      "0 1  0    1   0  0   0  0  0   0   0  1  0   1  1 \n",
+      "0 0  1    0   1  1   1  1  0   0   0  1  1   0  0 \n",
+      "0 0  0    0   1  0   0  0  0   0   0  1  0   0  0 \n",
+      "--------------------------------------------------\n",
+      "Level     1   2  1   1  2  1   3   1  2  1   4  1 \n"
      ]
     }
    ],
    "source": [
     "from truth_table import *\n",
     "\n",
-    "f1 = Formula(\"A imp P_1\")\n",
-    "f2 = Formula(\"P_1 or C\")\n",
-    "f3 = Formula(\"(C imp P_1) or A\")\n",
+    "f1 = Formula(\"forall y A1(y) imp Q2(a,b)\")\n",
+    "f2 = Formula(\"Q2(a,b) or C\")\n",
+    "f3 = Formula(\"not (C imp Q2(a,b)) or forall y A1(y)\")\n",
     "F_List = FormulaList([f1, f2, f3])\n",
     "F_List.show_truth_table()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A, id=2, bVal=0, level=1, alt_str=A\n",
-      "imp, id=-1, bVal=1, level=2, alt_str=\n",
-      "P_1, id=1, bVal=0, level=1, alt_str=P_1\n"
+      "Truth table for the following 3 formulas.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\forall y\\, A(y)\\: \\rightarrow\\: Q(a, b)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle Q(a, b)\\: \\vee\\: C$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\neg\\, (C\\: \\rightarrow\\: Q(a, b))\\: \\vee\\: \\forall y\\, A(y)$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prime subformulas and their alternate labels.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle [\\,C,\\: \\forall y\\, A(y),\\: Q(a, b)\\,]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle [\\,C,\\: P_{1},\\: P_{2}\\,]$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{|c|c|c||c|c|c||c|c|c||c|c|c|c|c|c|c|c|}\\hline\n",
+      "$C$ & $P_1$ & $P_2$ & $P_1$ & $\\to$ & $P_2$ & $P_2$ & $\\vee$\n",
+      " & $C$ & $\\neg$ & $($ & $C$ & $\\to$ & $P_2$ & $)$ & $\\vee$\n",
+      " & $P_1$ \\\\ \\hline\n",
+      "1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 &  & 1 & 1 & 1 &  & 1 & 1 \\\\\n",
+      "1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 &  & 1 & 0 & 0 &  & 1 & 1 \\\\\n",
+      "1 & 0 & 1 & 0 & 1 & 1 & 1 & 1 & 1 & 0 &  & 1 & 1 & 1 &  & 0 & 0 \\\\\n",
+      "1 & 0 & 0 & 0 & 1 & 0 & 0 & 1 & 1 & 1 &  & 1 & 0 & 0 &  & 1 & 0 \\\\\n",
+      "0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 &  & 0 & 1 & 1 &  & 1 & 1 \\\\\n",
+      "0 & 1 & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 &  & 0 & 1 & 0 &  & 1 & 1 \\\\\n",
+      "0 & 0 & 1 & 0 & 1 & 1 & 1 & 1 & 0 & 0 &  & 0 & 1 & 1 &  & 0 & 0 \\\\\n",
+      "0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 &  & 0 & 1 & 0 &  & 0 & 0 \\\\ \\hline\n",
+      "\\multicolumn{3}{|c||}{Level}\n",
+      "    & 1 & 2 & 1 & 1 & 2 & 1 & 3 &  & 1 & 2 & 1 &  & 4 & 1 \\\\ \\hline\n",
+      "\\end{tabular}\n"
      ]
     }
    ],
    "source": [
-    "show_tree_nodes(f1.ast)"
+    "F_List.show_truth_table('latex')"
    ]
   }
  ],
