--- a/attic/arith5parser.ipynb
+++ b/attic/arith5parser.ipynb
@@ -8,8 +8,6 @@
     "`G_ar5` is an extension of `G_ar4`.  \n",
     "`arith5parser.ipynb` is an implementation of `G_ar5`.\n",
     "\n",
-    "Arith5 is an extension of Arith4.  \n",
-    "\n",
     "Added components are:\n",
     "* unary prefix -\n",
     "* unary postfix !\n",
@@ -40,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -408,6 +406,9 @@
       "+ - * a - - b2 c\n",
       "+ + first * second + hello - c1 a23\n",
       "-(op_bin_1) a(identifier) -(op_unary_prefix) b(identifier)\n",
+      "\n",
+      "Some invalid expressions:\n",
+      "\n",
       "SyntaxError: Expected numeral or identifier at 2, in atom(): - (op_bin_1)\n",
       "SyntaxError: Expected numeral or identifier at 2, in atom(): + (op_bin_1)\n",
       "SyntaxError: Unexpected end of input, in atom()\n",
@@ -420,7 +421,8 @@
     "testParser(\"-a*(--b2) + c\")\n",
     "testParser(\"first + second* (hello + (-c1))+a23\")\n",
     "testParser(\"a - (-b)\", showOperType=True)\n",
-    "# Some invalid expressions.\n",
+    "\n",
+    "print(\"\\nSome invalid expressions:\\n\")\n",
     "testParser(\"a + -b\")\n",
     "testParser(\"a + + b\")\n",
     "testParser(\"a + b *\")\n",
@@ -429,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
