--- a/tests/latex_in_jupyternotebook.ipynb
+++ b/tests/latex_in_jupyternotebook.ipynb
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more informationm, you may visit [this github repo](https://github.com/Codesolid/latex-in-python)."
+    "For more information, you may visit [this github repo](https://github.com/Codesolid/latex-in-python)."
    ]
   }
  ],
