--- a/logical_formulas/first_order_logic_parser.ipynb
+++ b/logical_formulas/first_order_logic_parser.ipynb
@@ -36,10 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/attic'\n",
+    "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/logical_formulas'\n",
     "# import httpimport\n",
     "# with httpimport.remote_repo(url):\n",
-    "#   from first_order_logic_parse import *\n",
+    "#   from first_order_logic_parse0 import *\n",
     "  \n",
     "from first_order_logic_parse import *\n",
     "\n",
