Importing problem solved
Google Colab LaTeX related

--- a/logical_formulas/first_order_logic_parser.ipynb
+++ b/logical_formulas/first_order_logic_parser.ipynb
@@ -36,12 +36,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/logical_formulas'\n",
-    "# import httpimport\n",
-    "# with httpimport.remote_repo(url):\n",
-    "#   from first_order_logic_parse0 import *\n",
-    "  \n",
-    "from first_order_logic_parse import *\n",
+    "try:\n",
+    "  from first_order_logic_parse import *\n",
+    "except ImportError:\n",
+    "  url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/logical_formulas'\n",
+    "  import httpimport\n",
+    "  with httpimport.remote_repo(url):\n",
+    "    from first_order_logic_parse0 import *\n",
     "\n",
     "def testParser(input_text, showOption='polish', verbose=False):\n",
     "  # showOption ::= 'polish' | 'RPN' | 'infix_text' | 'infix_latex' |\n",
