--- a/logical_formulas/truth_table.ipynb
+++ b/logical_formulas/truth_table.ipynb
@@ -15,12 +15,13 @@
     }
    ],
    "source": [
-    "# url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/logical_formulas'\n",
-    "# import httpimport\n",
-    "# with httpimport.remote_repo(url):\n",
-    "#   from truth_table import *\n",
-    "\n",
-    "from truth_table import *\n",
+    "try:\n",
+    "  from truth_table import *\n",
+    "except ImportError:\n",
+    "  url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/logical_formulas'\n",
+    "  import httpimport\n",
+    "  with httpimport.remote_repo(url):\n",
+    "    from truth_table import *\n",
     "\n",
     "input_str = 'A or (B2(c,d+1) and forall x C1(x)) imp forall x C1(x) and B2(c,d+1)'\n",
     "node = parse_text(input_str)\n",
@@ -84,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'forall x C1(x)', 'B2(c, d + 1)']\n"
+      "['B2(c, d + 1)', 'forall x C1(x)', 'A']\n"
      ]
     }
    ],
@@ -126,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'C2(y, z)', 'forall x C1(x)', 'B2(c, d + 1)']\n"
+      "['B2(c, d + 1)', 'forall x C1(x)', 'C2(y, z)', 'A']\n"
      ]
     }
    ],
@@ -159,15 +160,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A, id=0, bVal=-1, level=-1, alt_str=A\n",
+      "A, id=3, bVal=-1, level=-1, alt_str=A\n",
       "or, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "B2, id=3, bVal=-1, level=-1, alt_str=P_1\n",
+      "B2, id=0, bVal=-1, level=-1, alt_str=P_1\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "B2, id=3, bVal=-1, level=-1, alt_str=P_1\n"
+      "B2, id=0, bVal=-1, level=-1, alt_str=P_1\n"
      ]
     },
     {
@@ -186,11 +187,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "C2, id=1, bVal=-1, level=-1, alt_str=P_3\n",
+      "C2, id=2, bVal=-1, level=-1, alt_str=P_3\n",
       "iff, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "A, id=0, bVal=-1, level=-1, alt_str=A\n"
+      "A, id=3, bVal=-1, level=-1, alt_str=A\n"
      ]
     }
    ],
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -938,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
