--- a/logical_formulas/truth_table.ipynb
+++ b/logical_formulas/truth_table.ipynb
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['B2(c, d + 1)', 'forall x C1(x)', 'A']\n"
+      "['forall x C1(x)', 'A', 'B2(c, d + 1)']\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C2(y, z)', 'forall x C1(x)', 'A']\n"
+      "['forall x C1(x)', 'A', 'C2(y, z)']\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['B2(c, d + 1)', 'forall x C1(x)', 'C2(y, z)', 'A']\n"
+      "['forall x C1(x)', 'A', 'C2(y, z)', 'B2(c, d + 1)']\n"
      ]
     }
    ],
@@ -160,15 +160,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A, id=3, bVal=-1, level=-1, alt_str=A\n",
+      "A, id=1, bVal=-1, level=-1, alt_str=A\n",
       "or, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "B2, id=0, bVal=-1, level=-1, alt_str=P_1\n",
+      "B2, id=3, bVal=-1, level=-1, alt_str=P_1\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=0, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=0, bVal=-1, level=-1, alt_str=P_2\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "B2, id=0, bVal=-1, level=-1, alt_str=P_1\n"
+      "B2, id=3, bVal=-1, level=-1, alt_str=P_1\n"
      ]
     },
     {
@@ -187,11 +187,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=0, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
       "C2, id=2, bVal=-1, level=-1, alt_str=P_3\n",
       "iff, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "A, id=3, bVal=-1, level=-1, alt_str=A\n"
+      "A, id=1, bVal=-1, level=-1, alt_str=A\n"
      ]
     }
    ],
