--- a/logical_formulas/first_order_logic_parser.ipynb
+++ b/logical_formulas/first_order_logic_parser.ipynb
@@ -42,7 +42,7 @@
     "  url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/logical_formulas'\n",
     "  import httpimport\n",
     "  with httpimport.remote_repo(url):\n",
-    "    from first_order_logic_parse0 import *\n",
+    "    from first_order_logic_parse import *\n",
     "\n",
     "def testParser(input_text, showOption='polish', verbose=False):\n",
     "  # showOption ::= 'polish' | 'RPN' | 'infix_text' | 'infix_latex' |\n",
