New Document.pdf
extensively revised

--- a/logical_formulas/truth_table.ipynb
+++ b/logical_formulas/truth_table.ipynb
@@ -128,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['B2(c, d + 1)', 'forall x C1(x)', 'C2(y, z)', 'Q']\n"
+      "['B2(c, d + 1)', 'C2(y, z)', 'forall x C1(x)', 'Q']\n"
      ]
     }
    ],
@@ -165,9 +165,9 @@
       "or, id=-1, bVal=-1, level=-1, alt_str=\n",
       "Q, id=3, bVal=-1, level=-1, alt_str=Q\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
       "B2, id=0, bVal=-1, level=-1, alt_str=P_1\n"
      ]
@@ -188,9 +188,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "forall, id=1, bVal=-1, level=-1, alt_str=P_2\n",
+      "forall, id=2, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "C2, id=2, bVal=-1, level=-1, alt_str=P_3\n",
+      "C2, id=1, bVal=-1, level=-1, alt_str=P_3\n",
       "iff, id=-1, bVal=-1, level=-1, alt_str=\n",
       "Q, id=3, bVal=-1, level=-1, alt_str=Q\n"
      ]
@@ -380,8 +380,6 @@
    "source": [
     "# Start fresh.\n",
     "\n",
-    "from truth_table import *\n",
-    "\n",
     "# Initialize a truth table object.\n",
     "fmla = Formula(input_str)\n",
     "fmla2 = Formula(input_str2)\n",
@@ -400,10 +398,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3]\n",
-      "[0, 1, 2, 3]\n",
-      "['P_1', 'P_2', 'P_3', 'Q']\n",
-      "['B2(c, d + 1)', 'forall x C1(x)', 'C2(y, z)', 'Q']\n",
+      "[0, 2, 1, 3]\n",
+      "[0, 2, 1, 3]\n",
+      "['P_1', 'P_3', 'P_2', 'Q']\n",
+      "['B2(c, d + 1)', 'C2(y, z)', 'forall x C1(x)', 'Q']\n",
       "['P_1', 'P_2', 'P_3', 'Q']\n",
       "['B2(c, d + 1)', 'forall x C1(x)', 'C2(y, z)', 'Q']\n"
      ]
@@ -458,9 +456,9 @@
      "text": [
       "You can read 10100 at bVal:\n",
       "\n",
-      "forall, id=1, bVal=1, level=0, alt_str=P_2\n",
+      "forall, id=2, bVal=1, level=0, alt_str=P_2\n",
       "imp, id=-1, bVal=0, level=2, alt_str=\n",
-      "C2, id=2, bVal=1, level=0, alt_str=P_3\n",
+      "C2, id=1, bVal=1, level=0, alt_str=P_3\n",
       "iff, id=-1, bVal=0, level=1, alt_str=\n",
       "Q, id=3, bVal=0, level=0, alt_str=Q\n",
       "\n",
@@ -1133,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1144,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle A\\: \\rightarrow\\: B$"
+       "$\\displaystyle A\\: \\rightarrow\\: \\forall x\\, B(x)$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -1158,7 +1156,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle B\\: \\vee\\: C$"
+       "$\\displaystyle \\forall x\\, B(x)\\: \\vee\\: D(f(a), b + 1)$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -1170,7 +1168,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle (C\\: \\rightarrow\\: \\neg\\, B)\\: \\rightarrow\\: C$"
+       "$\\displaystyle (D(f(a), b + 1)\\: \\rightarrow\\: \\neg\\, \\forall x\\, B(x))\\: \\rightarrow\\: D(f(a), b + 1)$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -1183,61 +1181,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prime subformulas and their alternate labels.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle [\\,A,\\: B,\\: C\\,]$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle [\\,A,\\: B,\\: C\\,]$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\begin{tabular}{|c|c|c||c|c|c||c|c|c||c|c|c|c|c|c|c|c|}\\hline\n",
-      "$A$ & $B$ & $C$ & $A$ & $\\to$ & $B$ & $B$ & $\\vee$\n",
-      " & $C$ & $($ & $C$ & $\\to$ & $\\neg$ & $B$ & $)$ & $\\to$\n",
-      " & $C$ \\\\ \\hline\n",
-      "1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 &  & 1 & 0 & 0 & 1 &  & 1 & 1 \\\\\n",
-      "1 & 1 & 0 & 1 & 1 & 1 & 1 & 1 & 0 &  & 0 & 1 & 0 & 1 &  & 0 & 0 \\\\\n",
-      "1 & 0 & 1 & 1 & 0 & 0 & 0 & 1 & 1 &  & 1 & 1 & 1 & 0 &  & 1 & 1 \\\\\n",
-      "1 & 0 & 0 & 1 & 0 & 0 & 0 & 0 & 0 &  & 0 & 1 & 1 & 0 &  & 0 & 0 \\\\\n",
-      "0 & 1 & 1 & 0 & 1 & 1 & 1 & 1 & 1 &  & 1 & 0 & 0 & 1 &  & 1 & 1 \\\\\n",
-      "0 & 1 & 0 & 0 & 1 & 1 & 1 & 1 & 0 &  & 0 & 1 & 0 & 1 &  & 0 & 0 \\\\\n",
-      "0 & 0 & 1 & 0 & 1 & 0 & 0 & 1 & 1 &  & 1 & 1 & 1 & 0 &  & 1 & 1 \\\\\n",
-      "0 & 0 & 0 & 0 & 1 & 0 & 0 & 0 & 0 &  & 0 & 1 & 1 & 0 &  & 0 & 0 \\\\ \\hline\n",
-      "\\multicolumn{3}{|c||}{Level}\n",
-      "    & 1 & 2 & 1 & 1 & 2 & 1 &  & 1 & 3 & 2 & 1 &  & 4 & 1 \\\\ \\hline\n",
-      "\\end{tabular}\n"
+      "prime subformulas = ['A', 'forall x B1(x)', 'D2(f(a), b + 1)']\n",
+      "alt prop. letters = ['A', 'P_1', 'P_2']\n",
+      "\n",
+      "A P1 P2 : A imp P1, P1 or P2, (P2 imp not P1) imp P2\n",
+      "----------------------------------------------------\n",
+      "1 1  1    1  1  1   1  1  1    1   0   0  1    1  1 \n",
+      "1 1  0    1  1  1   1  1  0    0   1   0  1    0  0 \n",
+      "1 0  1    1  0  0   0  1  1    1   1   1  0    1  1 \n",
+      "1 0  0    1  0  0   0  0  0    0   1   1  0    0  0 \n",
+      "0 1  1    0  1  1   1  1  1    1   0   0  1    1  1 \n",
+      "0 1  0    0  1  1   1  1  0    0   1   0  1    0  0 \n",
+      "0 0  1    0  1  0   0  1  1    1   1   1  0    1  1 \n",
+      "0 0  0    0  1  0   0  0  0    0   1   1  0    0  0 \n",
+      "----------------------------------------------------\n",
+      "Level     1  2  1   1  2  1    1   3   2  1    4  1 \n"
      ]
     }
    ],
    "source": [
-    "f1 = Formula('A imp B')\n",
-    "f2 = Formula('B or C')\n",
-    "f3 = Formula('(C imp not B) imp C')\n",
+    "f1 = Formula('A imp forall x B1(x)')\n",
+    "f2 = Formula('forall x B1(x) or D2(f(a), b+1)')\n",
+    "f3 = Formula('(D2(f(a), b+1) imp not forall x B1(x)) imp D2(f(a), b+1)')\n",
     "t_table = TruthTable([f1, f2, f3])\n",
-    "t_table.show_truth_table('latex')"
+    "t_table.show_truth_table()"
    ]
   }
  ],
