Fitch proof, step 1
3 Classes
(1) Ann (for annotation)
(2) NodeLabel (like token)
(3) ProofNode

--- a/attic/arith6parser.ipynb
+++ b/attic/arith6parser.ipynb
@@ -538,13 +538,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_text(input_text):\n",
+    "def parse_ast(input_text):\n",
     "  tokens = tokenizer(input_text)\n",
     "  parser = Parser(tokens)\n",
     "  ast = parser.parse() # ast = Abstract Syntax Tree\n",
     "  if parser.current_token is not None:\n",
     "    raise SyntaxError(f\"Unexpected token {parser.current_token} at {parser.index},\" +\n",
-    "                      f\" in parse_text(). Expected end of input.\")\n",
+    "                      f\" in parse_ast(). Expected end of input.\")\n",
     "  return ast\n",
     "\n",
     "def testParser(input_text, showOption='polish', showOperType=False):\n",
@@ -553,7 +553,7 @@
     "  from IPython.display import display, Math\n",
     "\n",
     "  try:\n",
-    "    ast = parse_text(input_text)\n",
+    "    ast = parse_ast(input_text)\n",
     "  except ValueError as e:\n",
     "    print(f\"ValueError: {e}\")\n",
     "  except SyntaxError as e:\n",
