--- a/logical_formulas/first_order_logic_parser.ipynb
+++ b/logical_formulas/first_order_logic_parser.ipynb
@@ -52,7 +52,7 @@
     "  from IPython.display import display, Math\n",
     "\n",
     "  try:\n",
-    "    ast = parse_text(input_text)\n",
+    "    ast = parse_ast(input_text)\n",
     "  except ValueError as e:\n",
     "    print(f\"ValueError: {e}\")\n",
     "  except SyntaxError as e:\n",
