--- a/logical_formulas/formula_methods.ipynb
+++ b/logical_formulas/formula_methods.ipynb
@@ -361,7 +361,7 @@
     "print(\"Original formula:\")\n",
     "fmla.display_infix()\n",
     "for pos in pos_li[1:]:\n",
-    "  new_formula = fmla.replace_node_at(pos, parse_text('Z'), 'dupl')\n",
+    "  new_formula = fmla.replace_node_at(pos, parse_ast('Z'), 'dupl')\n",
     "  if new_formula:\n",
     "    print(f\"replace node at {pos} with Z:\")\n",
     "    new_formula.display_infix()\n",
@@ -421,7 +421,7 @@
     "print(\"Original formula:\")\n",
     "fmla.display_infix()\n",
     "pos = [0,0]\n",
-    "new_formula = fmla.replace_node_at(pos, parse_text('Z'))\n",
+    "new_formula = fmla.replace_node_at(pos, parse_ast('Z'))\n",
     "if new_formula:\n",
     "  print(f\"replace node at {pos} with Z:\")\n",
     "  new_formula.display_infix()\n",
@@ -493,7 +493,7 @@
     "print(\"Original formula:\")\n",
     "fmla.display_infix()\n",
     "pos_li = [[0,0], [1,1]]\n",
-    "new_node_li = [parse_text('P'), parse_text('Q')]\n",
+    "new_node_li = [parse_ast('P'), parse_ast('Q')]\n",
     "new_fmla = fmla.replace_nodes_at(pos_li, new_node_li, 'dupl')\n",
     "if new_fmla:\n",
     "    new_fmla.display_infix()\n",
@@ -552,7 +552,7 @@
     "print(\"Original formula:\")\n",
     "fmla.display_infix()\n",
     "pos_li = [[0,0], [1,1]]\n",
-    "new_node_li = [parse_text('P'), parse_text('Q')]\n",
+    "new_node_li = [parse_ast('P'), parse_ast('Q')]\n",
     "new_fmla = fmla.replace_nodes_at(pos_li, new_node_li)\n",
     "if new_fmla:\n",
     "    new_fmla.display_infix()\n",
@@ -607,7 +607,7 @@
     "# 1/2. dupl == '' case\n",
     "fmla_orig = Formula('x=1 and A3(x, y, x^2) imp y >= x')\n",
     "fmla_orig.display_infix()\n",
-    "new_node = parse_text('z^2')\n",
+    "new_node = parse_ast('z^2')\n",
     "fmla_new = fmla_orig.substitute('x', new_node, 'dupl')\n",
     "if fmla_new:\n",
     "  fmla_new.display_infix()\n",
@@ -648,7 +648,7 @@
     "# 2/2. dupl == 'dupl' case\n",
     "fmla_orig = Formula('x=1 and A3(x, y, x^2) imp y >= x')\n",
     "fmla_orig.display_infix()\n",
-    "new_node = parse_text('z^2')\n",
+    "new_node = parse_ast('z^2')\n",
     "fmla_new = fmla_orig.substitute('x', new_node)\n",
     "if fmla_new: \n",
     "  fmla_new.display_infix() # will not execute\n",
