--- a/logical_formulas/truth_table.ipynb
+++ b/logical_formulas/truth_table.ipynb
@@ -24,7 +24,7 @@
     "    from truth_table import *\n",
     "\n",
     "input_str = '(B2(c,d+1) or Q) and forall x C1(x) imp forall x C1(x) and B2(c,d+1)'\n",
-    "node = parse_text(input_str) # type: ignore\n",
+    "node = parse_ast(input_str) # type: ignore\n",
     "assert isinstance(node, Node) # type: ignore\n",
     "fmla = Formula(node)        # type: ignore | Construct a formula from a node\n",
     "fmla1 = Formula(input_str)  # type: ignore | Construct a formula from a string\n",
